Fix disabled google button alignment

--- a/client/src/components/header/Header.scss
+++ b/client/src/components/header/Header.scss
@@ -35,7 +35,7 @@
 .google__button--disabled {
   width: 191px;
   height: 46px;
-  display: block;
+  display: inline-block;
   background-image: url('../../assets/images/btn_google_signin_dark_disabled_web.png');
   pointer-events: not-allowed;
   text-decoration: none;
